# jasmine_warpfield

./: .codeclimate.yml  .flake8  .gitattributes  .gitignore  .vscode  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  notebook.yml  pytest.yml  unittest.yml  validation.yml
challenge/: README.md
challenge/baseline/: baseline.txt  baseline_pointing.txt  generate.py
challenge/case1/: README.md  case1_challenge_00.txt  case1_challenge_01.txt  case1_challenge_02.txt  case1_challenge_03.txt  case1_challenge_04.txt  challenge_00.txt  challenge_04.txt  generate_case1.py
challenge/case2/: README.md  case2_challenge_00.txt  case2_challenge_01.txt  case2_challenge_02.txt  case2_challenge_03.txt  case2_challenge_04.txt  case2_source_list.txt  generate_case2.py
challenge/case3/: README.md  case3_challenge_00.txt  case3_challenge_01.txt  case3_challenge_02.txt  case3_challenge_03.txt  case3_challenge_04.txt  case3_challenge_05.txt  case3_challenge_06.txt  case3_challenge_07.txt  case3_challenge_08.txt  case3_challenge_09.txt  generate_case3.py  generate_case3_sip.py
challenge/case4/: README.md  case4_challenge_00.txt  case4_challenge_01.txt  case4_challenge_02.txt  case4_challenge_03.txt  case4_challenge_04.txt  generate_case4.py
challenge/case5/: README.md  case5_challenge_00.txt  case5_challenge_00_pointing.txt  case5_challenge_01.txt  case5_challenge_01_pointing.txt  case5_challenge_02.txt  case5_challenge_02_pointing.txt  case5_challenge_03.txt  case5_challenge_03_pointing.txt  case5_challenge_04.txt  case5_challenge_04_pointing.txt  generate_case5.py
challenge/case6/: README.md  case6_challenge_00.txt  case6_challenge_00_pointing.txt  case6_challenge_01.txt  case6_challenge_01_pointing.txt  case6_challenge_02.txt  case6_challenge_02_pointing.txt  case6_challenge_03.txt  case6_challenge_03_pointing.txt  case6_challenge_04.txt  case6_challenge_04_pointing.txt  generate_case6.py
challenge/case7/: README.md  case7_challenge_00.txt  case7_challenge_00_pointing.txt  case7_challenge_01.txt  case7_challenge_01_pointing.txt  case7_challenge_02.txt  case7_challenge_02_pointing.txt  case7_challenge_03.txt  case7_challenge_03_pointing.txt  case7_challenge_04.txt  case7_challenge_04_pointing.txt  generate_case7.py
challenge/case8/: README.md  case8_challenge_00.txt  case8_challenge_00_pointing.txt  case8_challenge_01.txt  case8_challenge_01_pointing.txt  case8_challenge_02.txt  case8_challenge_02_pointing.txt  case8_challenge_03.txt  (+4 more)
notebook/: sample.coo  sample_01_on-sky_footprints.ipynb  sample_02_on-sky_footprints.ipynb  tutorial_01_retrieve_gaia_dr3_catalog.ipynb  tutorial_01_retrieve_gaia_edr3_catalog.ipynb  tutorial_02_display_gaia_edr3_sources.ipynb  tutorial_03_apply_space_motion.ipynb  tutorial_04_illustrate_the_layout_of_the_focal_plane.ipynb  tutorial_05_telescope_position_angle.ipynb  tutorial_05_various_detector_layout.ipynb  tutorial_06_simple_distortion_function.ipynb  tutorial_06_various_detector_layout.ipynb  tutorial_07_simple_distortion_function.ipynb  tutorial_08_legendre_distortion_function.ipynb  tutorial_08_on-sky_footprints.ipynb  tutorial_09_on-sky_footprints.ipynb  tutorial_10_apply_space_motion.ipynb  update.sh  warped  warpfield
scripts/: inference.py
tests/: .skelton.py  requirements.txt  test_dummy.py
uml/: classes.md  sequence_01  sequence_01.md
warped/: detector.py  source.py
warpfield/: DUMMY.py  HgCdTe.py  InGaAs.py  __init__.py  distortion.py  source.py  telescope.py  util.py  version.py
(+102 files in other folders)
