[metadata]
name = jasmine_warpfield
description = An experimental code to simulate a warped focal plane
long_description = file: README.md
long_description_content_type = text/markdown
version = warpfield.__version__
license_files = LICENSE

author = Ryou Ohsawa
author_email = ryou.ohsawa@nao.ac.jp

classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Astronomy

project_urls =
  homepage = https://github.com/JASMINE-Mission/jasmine_warpfield
  repository = https://github.com/JASMINE-Mission/jasmine_warpfield

[options]
zip_safe = False
python_requries = >=3.9
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
include =
  warpfield*
exclude =
  tests*
  scripts*
